# mcpserver-prompts

./: pyproject.toml
src/: __init__.py  __main__.py  prompts.py
src/mcpserver/: __main__.py  prompts.py
